# mla

./: .audit-ci.json  .dockerignore  .env.test  .eslintrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .prettierignore  .vale.ini  Dockerfile  README.md  cypress.config.js  cypress.json  environment.d.ts  eslint.config.mjs  expect.d.ts  fly.toml  jestSetup.js  netlify.toml  next-i18next.config.js  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cicd-tools/configuration/: actionlint.yaml  changelog.json
.cicd-tools/pgp/: verification.sign  verification.txt
.github/: dependabot.yml
.github/scripts/: architecture-path.sh  architecture.sh  job-40-vercel-author.sh  job-50-test-precommit.sh  setup.sh  step-setup-environment.sh
.github/workflows/: ci.yml
cypress/: .webpack.cypress.js  tsconfig.json
cypress/config/: env.ts  index.ts
cypress/fixtures/: auth.ts  cookies.js  cookies.ts  reports.js  reports.ts  setup.ts
cypress/plugins/: index.js
cypress/types/: config.ts  env.ts  reports.ts
cypress/utils/: build.config.ts  env.js  env.mjs  env.ts
jest/: globalSetup.js
jest/modules/: images.js
jest/setup/: emotion.js  fetch.js  i18next.js  next.jsx  snapshot.js  testing-library.js  text.js
log/: October-2021.md  October-2023.md
src/clients/: http.class.ts
src/config/: api.ts  apiEndpoints.js  apiRoutes.js  apiRoutes.ts  app.js  auth.ts  billboard.ts  cache.ts  cookies.ts  dialogue.ts  events.js  events.ts  (+17 more)
types.d/: deep-keys.d.ts  environment.d.ts  expect.d.ts  next-auth.d.ts  use-persisted-reducer.d.ts
(+2841 files in other folders)
